Closed Bug 30372 Opened 25 years ago Closed 25 years ago

can not load page with midi file. Mozilla crashes.

Categories

(Core :: DOM: Core & HTML, defect, P3)

x86
Windows 95
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: marciales, Assigned: jst)

References

()

Details

From Bugzilla Helper: User-Agent: Mozilla/4.72 [en] (Win95; U) BuildID: 22820 After opening and loading the Mozilla main page, I type www.slashdot.org , the page seems to start ( a black initial page ) but it crashes before loading any applet or banner . The foolowing message of the crash follows : MOZILLA provocó un fallo de página no válida en el módulo GKHTML.DLL de 0137:01797d53. Registros: EAX=011078f0 CS=0137 EIP=01797d53 EFLGS=00010246 EBX=01107578 SS=013f ESP=0068bec0 EBP=0068c0dc ECX=0068c0e8 DS=013f ESI=00000000 FS=0e3f EDX=0068c0e8 ES=013f EDI=00000000 GS=0000 Bytes en CS:EIP: 01 5e 85 ff 74 1a 8b 45 fc ff 37 8b 08 50 ff 91 Volcado de pila: ff855e01 0110756c 0068c17c 01107578 01199250 00000001 0068bfc4 011a3570 0079b830 00ef0da0 0071c530 0079b830 00ef0da0 00000000 0071b618 00000001 Using W95 build 9.0.1111 B in spanish Reproducible: Always Steps to Reproduce: 1.type the URL : www.slashdot.org 2.click return 3.System crashes. Actual Results: The NetscapeQuality feedback agent records and queue the incident.. MOZILLA provocó un fallo de página no válida en el módulo GKHTML.DLL de 0137:01797d53. Registros: EAX=011078f0 CS=0137 EIP=01797d53 EFLGS=00010246 EBX=01107578 SS=013f ESP=0068bec0 EBP=0068c0dc ECX=0068c0e8 DS=013f ESI=00000000 FS=0e3f EDX=0068c0e8 ES=013f EDI=00000000 GS=0000 Bytes en CS:EIP: 01 5e 85 ff 74 1a 8b 45 fc ff 37 8b 08 50 ff 91 Volcado de pila: ff855e01 0110756c 0068c17c 01107578 01199250 00000001 0068bfc4 011a3570 0079b830 00ef0da0 0071c530 0079b830 00ef0da0 00000000 0071b618 00000001
This is a Communicator bug - note the User-Agent. Marking INVALID. Gerv
Status: UNCONFIRMED → RESOLVED
Closed: 25 years ago
Resolution: --- → INVALID
In the nightly build 2000030516 , mozillas crashes at the following URL : www.lanzadera.com/elprofe : MOZILLA provocó una excepción 10H en el módulo MSVCRT.DLL de 0137:7800256d. Registros: EAX=7ff01f70 CS=0137 EIP=7800256d EFLGS=00010202 EBX=00000000 SS=013f ESP=0068cc5c EBP=0068cc68 ECX=7fe00000 DS=013f ESI=60b0e1f8 FS=0e3f EDX=007b1ec0 ES=013f EDI=00000000 GS=0000 Bytes en CS:EIP: d9 6d fe 8b 45 f4 8b 55 f8 c9 c3 29 20 00 78 21 Volcado de pila: 00000006 00000000 13701f70 0068cc74 60aec036 0172a7d0 0068cc94 60ad2578 0262a5e0 ffffffff 7fefffff 0068cca4 0262a5e0 006d3a14 0068cccc 60aebef9
The user agent is captured by cbegle's bug helper. It is captured from whatever browser is used to report the bug. This is not a communicator bug. Re-opening
Status: RESOLVED → UNCONFIRMED
Resolution: INVALID → ---
Ah, sorry. It was late at night :-) Isn't this the second bug I closed that you've reopened recently? I should be more careful... marciales@telcel.net.ve - please submit new crash bugs as different bugs, particularly if they are not the same crash (one is in GKHTML.DLL, the other in MSVCRT.DLL). Seeing as slashdot.org emphatically WORKSFORME, both in M14 and the latest nightly, there's not much I can do to help on that one. The other URL, or at least subparts of the site, is screwed up in the latest nightly - but could you please submit a new bug, with all the fields filled out correctly, on this - we can't work from just a comment. I would close this as INVALID, but seeing as I've already closed this bug once, I'll just leave it as Somebody Else's Problem ;-) Gerv
Reporter, are you still able to reproduce the slashdot crashes consistently? Are you able to reproduce the www.lanzadera.com/elprofe crashes consistently. Both of these are worksforme on 3/9 win32 build under NT
With the new build 5.0.15.2000031709 with the same URL :www.lanzadera.com/elprofe , the browser crashes. elprofe has a MIDI file to be opened (Netscape 4.72) and it should display the page if the plug-in is not available
I cannot reproduce this with 3/17 build under 98 or NT. Changing summary to reflect possible MIDI plug-in problem and updating crashing URL. Sending to Plug-in for a look.
Assignee: cbegle → av
Component: Browser-General → Plug-ins
QA Contact: asadotzler → shrir
Summary: can not load the page. Mozilla crashes. → can not load page with midi file. Mozilla crashes.
It plays fine to me with QuickTime 4.0 plugin. What plugin causes the crash?
Sirs : I am using Crescendo version 4.02 . It works fine with Netscape...
It crashes on dereferencing null-pointer in nsJSProtocolHandler::NewChannel The following patch seems to fix the problem: Index: nsJSProtocolHandler.cpp =================================================================== RCS file: /cvsroot/mozilla/dom/src/jsurl/nsJSProtocolHandler.cpp,v retrieving revision 1.38 diff -r1.38 nsJSProtocolHandler.cpp 204a205,208 > > if(notificationCallbacks == nsnull) > return NS_ERROR_FAILURE; > Sending to JS people to investigate/review.
Assignee: av → rogerl
Component: Plug-ins → Javascript Engine
QA Contact: shrir → rginda
(reproduced with 3/21 debug build on NT) Wrong JS people. finger++.
Assignee: rogerl → jst
Component: Javascript Engine → DOM Level 0
QA Contact: rginda → desale
I'm unable to reproduce this, loads fine on both WinNT and Linux.
av, if you're still able to reproduce this could you include a stack trace here?
On Linux? Are you saying it plays music on Linux? To my understanding it only crashes with a specific plugin -- Crescendo. If there is no plugin available the page just loads with no crash. Other plugins seem to work too. I'll give you the stack first thing in the morning.
Sirs : Mozilla crashes because it has no plug in in it. I use crescendo with netscape. Anyhow, I downloaded the nighthly build 0f 19/3 which loaded succesfully the build 2000031905. Again loading www.lanzadera.com/elprofe crashes the browser : MOZILLA provocó una excepción 10H en el módulo MSVCRT.DLL de 0137:7800256d. Registros: EAX=7ff01f70 CS=0137 EIP=7800256d EFLGS=00010202 EBX=00000000 SS=013f ESP=0068cc6c EBP=0068cc78 ECX=7fe00000 DS=013f ESI=60abe1f8 FS=0f6f EDX=00891ec0 ES=013f EDI=00000000 GS=0000 Bytes en CS:EIP: d9 6d fe 8b 45 f4 8b 55 f8 c9 c3 29 20 00 78 21 Volcado de pila: 00000006 00000000 13701f70 0068cc84 60a9c036 01145198 0068cca4 60a82578 00a42400 ffffffff 7fefffff 0068ccb4 00a42400 007b3a14 0068ccdc 60a9bef9 Running w95 , 4.00.1111 B in spanish, with McAfee viruscan
Mozilla does not like music..!!! try : www.apidom.com/carta/index.shtml This is a place to send greeting cards . I you choose one with music and try to visualize it, Mozilla crashes : MOZILLA provocó un fallo de página no válida en el módulo JSURL.DLL de 0137:603b18db. Registros: EAX=00000000 CS=0137 EIP=603b18db EFLGS=00010246 EBX=00000000 SS=013f ESP=0068f72c EBP=0068f7d8 ECX=0068f7d0 DS=013f ESI=80000000 FS=0e1f EDX=0068f7d0 ES=013f EDI=00000000 GS=0000 Bytes en CS:EIP: 8b 08 50 ff 51 0c 39 7d f8 75 0a be 05 40 00 80 Volcado de pila: 603b4178 0068f7d0 01892740 80000000 00000000 74656e2f 6b726f77 6f72702f 6f636f74 616e3f6c 6a3d656d 73617661 70697263 00680074 7800ccb3 00000009 Remember, I am running mozilla with no midi plug-in
marciales: Mozilla picks plugins from Communicator 4.x. To verify this you can temporarily rename Plugins directory in 4.x installation and restart Mozilla. jst: here the call stack goes: nsJSProtocolHandler::NewChannel(nsJSProtocolHandler * const 0x03d3dd00, const char * 0x022c647c ??_C@_04JMJF@load?$AA@, nsIURI * 0x03d3ea30, nsILoadGroup * 0x00000000, nsIInterfaceRequestor * 0x00000000, unsigned int 0, nsIURI * 0x00000000, unsigned int 0, unsigned int 0, nsIChannel * * 0x0012facc) line 211 + 33 bytes nsIOService::NewChannelFromURI(nsIOService * const 0x01c4c720, const char * 0x022c647c ??_C@_04JMJF@load?$AA@, nsIURI * 0x03d3ea30, nsILoadGroup * 0x00000000, nsIInterfaceRequestor * 0x00000000, unsigned int 0, nsIURI * 0x00000000, unsigned int 0, unsigned int 0, nsIChannel * * 0x0012facc) line 241 + 59 bytes NS_OpenURI(nsIChannel * * 0x0012fafc, nsIURI * 0x03d3ea30, nsILoadGroup * 0x00000000, nsIInterfaceRequestor * 0x00000000, unsigned int 0, unsigned int 0, unsigned int 0) line 79 + 58 bytes NS_OpenURI(nsIStreamListener * 0x03d3dd80, nsISupports * 0x00000000, nsIURI * 0x03d3ea30, nsILoadGroup * 0x00000000) line 117 + 25 bytes nsPluginHostImpl::NewPluginURLStream(nsPluginHostImpl * const 0x01c48f20, const nsString & {...}, nsIPluginInstance * 0x03da8740, nsIPluginStreamListener * 0x03d3ea80) line 2353 + 17 bytes nsPluginHostImpl::GetURL(nsPluginHostImpl * const 0x01c48f20, nsISupports * 0x03da8740, const char * 0x03e57160, const char * 0x00000000, nsIPluginStreamListener * 0x03d3ea80, const char * 0x00000000, const char * 0x00000000, int 0) line 1209 + 30 bytes ns4xPlugin::_geturl(_NPP * 0x03da8754, const char * 0x03e57160, const char * 0x00000000) line 470 + 39 bytes NPMIDI32! 03e2cc02() NPMIDI32! 03e2dba3() NPMIDI32! 03e31dbb() NPMIDI32! 03e40f06() NPMIDI32! 03e3ff61() NPMIDI32! 03e40169() USER32! 77e71250()
The proposed patch fixes the crash, and music plays fine. And it will be just safer to check the passed pointer for being null before accessing it. I can check it in with somebody's approval.
*** Bug 27548 has been marked as a duplicate of this bug. ***
Ok, I missunderstood this, so no, it doesn't play music on linux, nor did it on windows either for me since I don't happen to have the plugin. I looked at the code and the patch and I agree, it should be checked in, but I'd perfee if you'd use the NS_ENSURE_ARG_POINTER macro in the beginning of the method, ie make it this in stead: Index: src/jsurl/nsJSProtocolHandler.cpp =================================================================== RCS file: /cvsroot/mozilla/dom/src/jsurl/nsJSProtocolHandler.cpp,v retrieving revision 1.39 diff -r1.39 nsJSProtocolHandler.cpp 200a201 > NS_ENSURE_ARG_POINTER(notificationCallbacks); av, please test this and check it in, consider the patch reviewed, and thanks for fixing this!
Done. shrir: you are probably the right person to verify this and 27548. It could also fix other crashes where a plugin requests URL.
Status: UNCONFIRMED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
reassigning qa contact to self.
QA Contact: desale → shrir
I crash on NT when I try to load this page using today's build (2000032909).I have crescendo 4.02 installed. Stack trace : nsEvaluateStringProxy::EvaluateString [d:\builds\seamonkey\mozilla\dom\src\jsurl\nsJSProtocolHandler.cpp, line 101] XPTC_InvokeByIndex [d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcinvoke.cpp, line 139] EventHandler [d:\builds\seamonkey\mozilla\xpcom\proxy\src\nsProxyEvent.cpp, line 482] PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 564] PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 527] _md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 1020] USER32.dll + 0x1820 (0x77e71820)
Pls. disregard my earlier comment. I hadn't restarted 4.7 before I tried this page with mozilla. This problem is FIXED. Marking VERIFIED.
Status: RESOLVED → VERIFIED
Why should one restart 4.7?
The plugin installation page mentioned to restart navigator after installation...
The "Setup Complete" dialog box mentions this..
I do not think it means "Restart 4.7 to make Mozilla work". I still see the crash you reported, the problem being very similar to what it was before. Simple patch fixes it. Index: nsJSProtocolHandler.cpp =================================================================== RCS file: /cvsroot/mozilla/dom/src/jsurl/nsJSProtocolHandler.cpp,v retrieving revision 1.41 diff -r1.41 nsJSProtocolHandler.cpp 96a97,98 > NS_ENSURE_ARG_POINTER(callbacks); jst: what do you think?
I should have mentioned..I installed the plugin in 4.7, sorry.
I still do not get it. Wht should I do in order not to crash. I did not just install the plugin, I had it.
My fault..pls ignore my earlier comments.I tried it on another machine and redid all the steps from the beginning. It does crash. Reopening.
Status: VERIFIED → UNCONFIRMED
Resolution: FIXED → ---
Can someone get a stacktrace for the crash?
Talkback report: nsEvaluateStringProxy::EvaluateString [d:\builds\seamonkey\mozilla\dom\src\jsurl\nsJSProtocolHandler.cpp, line 101] XPTC_InvokeByIndex [d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcinvoke.cpp, line 139] EventHandler [d:\builds\seamonkey\mozilla\xpcom\proxy\src\nsProxyEvent.cpp, line 482] PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 564] PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 527] _md_EventReceiverProc [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c, line 1020] USER32.dll + 0x1820 (0x77e71820)
It breaks on Int 3: NTDLL! 77f76148() nsDebug::Assertion(const char * 0x03d09c2c ??_C@_0DJ@KMGL@You?5can?8t?5dereference?5a?5NULL?5nsC@, const char * 0x03d09c70 ??_C@_0N@NHHF@mRawPtr?5?$CB?$DN?50?$AA@, const char * 0x03d09c80 ??_C@_0CB@MCGB@?4?4?2?4?4?2?4?4?2dist?2include?2nsCOMPtr?4h@, int 621) line 189 + 13 bytes nsDebug::PreCondition(const char * 0x03d09c2c ??_C@_0DJ@KMGL@You?5can?8t?5dereference?5a?5NULL?5nsC@, const char * 0x03d09c70 ??_C@_0N@NHHF@mRawPtr?5?$CB?$DN?50?$AA@, const char * 0x03d09c80 ??_C@_0CB@MCGB@?4?4?2?4?4?2?4?4?2dist?2include?2nsCOMPtr?4h@, int 621) line 282 + 21 bytes nsCOMPtr<nsIInterfaceRequestor>::operator->() line 621 + 34 bytes nsEvaluateStringProxy::EvaluateString(nsEvaluateStringProxy * const 0x03b24430, char * * 0x0206fc38, int * 0x0206fc3c) line 102 + 38 bytes XPTC_InvokeByIndex(nsISupports * 0x03b24430, unsigned int 4, unsigned int 2, nsXPTCVariant * 0x03b1b530) line 139 EventHandler(PLEvent * 0x03b242c0) line 481 + 41 bytes PL_HandleEvent(PLEvent * 0x03b242c0) line 563 + 10 bytes PL_ProcessPendingEvents(PLEventQueue * 0x0141ffd0) line 508 + 9 bytes _md_EventReceiverProc(HWND__ * 0x00fc04ee, unsigned int 49344, unsigned int 0, long 21102544) line 1018 + 9 bytes And then crashes at the same place. Above mentioned patch fixes it. But I think the whole thing is alarming.
av, thanks for the patch, the patch does the right thing, but once we're at it I'd like to add some more null ptr protection to that function, how about: Index: dom/src/jsurl/nsJSProtocolHandler.cpp =================================================================== RCS file: /cvsroot/mozilla/dom/src/jsurl/nsJSProtocolHandler.cpp,v retrieving revision 1.41 diff -u -r1.41 nsJSProtocolHandler.cpp --- nsJSProtocolHandler.cpp 2000/03/29 03:57:30 1.41 +++ nsJSProtocolHandler.cpp 2000/03/30 20:41:51 @@ -87,12 +87,16 @@ NS_IMETHODIMP nsEvaluateStringProxy::EvaluateString(char **aRetValue, PRBool *aIsUndefined) { + NS_ENSURE_ARG_POINTER(mChannel); + NS_ENSURE_ARG_POINTER(aRetValue); + NS_ENSURE_ARG_POINTER(aIsUndefined); + nsresult rv; - NS_ENSURE_ARG_POINTER(mChannel); nsCOMPtr<nsIInterfaceRequestor> callbacks; rv = mChannel->GetNotificationCallbacks(getter_AddRefs(callbacks)); if (NS_FAILED(rv)) return rv; + NS_ENSURE_TRUE(callbacks, NS_ERROR_FAILURE); // The event sink must be a script global Object Owner or we fail. nsCOMPtr<nsIScriptGlobalObjectOwner> globalOwner; Say r= and I'll check it in, or check it in an consider it reviewed by me.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
r=av
Thank you av, patch checked in, marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
verified with build 2000040509
Status: RESOLVED → VERIFIED
Sirs : Please go to bug 25878 to read the report of the quality feedback sent with the zip build 2000041108. I could not install Mozilla, but only after using mozregistry.dat from the instalation of Netscape 6.0 , Mozilla loaded (seamonkey.exe in /bin folder). The browser does not behave well, but the bug, www.lanzadera.com/elprofe made the browser crash again. This time I reported back with the quality agent the asked trace of the stack ( I supose ).....Pacific time should be around 3:08 PM By the way : Nescape 6.0 crashes in the same URL..... and the instalation is not bullet proof...some times it loads without problem, other times it loads after a reestart of W95, spanish, 4.00.1111 .....
You need to log in before you can comment on or make changes to this bug.