Fixing null-pointer access causing variuos crashes, bug #30372, r=jst